--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
         <h4 class="headerh3">Welcome Back👋! <br>Margret</h4>
         <h1 class="headerh1">Accounts</h1>
         <div class="card">
-            <h6>Hello Margret, your account is currently under restriction</h6>
+            <h5 class="cardh5">Hello Margret, your account is currently under restriction</h5>
             <h1>$154,395.78</h1>
             <div>
                 <h5>TD UNLIMITED CHECKING ACCOUNT</h5>
@@ -125,4 +125,5 @@
     </div>
 
 </body>
+
 </html>
