Enhance account statement layout and details
Updated account statement with transaction dates and improved formatting.

--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
         <h4 class="headerh3">Welcome Back👋! <br>Margret</h4>
         <h1 class="headerh1">Accounts</h1>
         <div class="card">
-            <h5 class="cardh5">Hello Margret, your account is currently under restriction</h5>
+            <h5 class="cardh5">Hello Margret, your account is currently under restriction...</h5>
             <h1>$154,395.78</h1>
             <div>
                 <h5>TD UNLIMITED CHECKING ACCOUNT</h5>
@@ -44,45 +44,72 @@
             <h4>Activity</h4>
 
             <div class="sum-sec">
-                <p>Interest Earned***</p>
+                <p>
+                    <span style="font-size: 10px;">25 Nov, 2025</span> <br>
+                    Interest Earned*** 
+                </p>
                 <h5>$10.19</h5>
             </div>
 
             <div class="sum-sec">
-                <p>E-TRANSFER CA ***PDH</p>
+                <p>
+                    <span style="font-size: 10px;">23 Nov, 2025</span> <br>
+                    E-TRANSFER CA ***PDH
+                </p>
                 <h5>$4,750.00</h5>
             </div>
 
             <div class="sum-sec">
-                <p>METRO</p>
+                <p>
+                    <span style="font-size: 10px;">22 Nov, 2025</span> <br>
+                    METRO
+                </p>
                 <h5 style="color: red;">$69.79</h5>
             </div>
 
             <div class="sum-sec">
-                <p>ACC MAINTENANCE</p>
+                <p>
+                    <span style="font-size: 10px;">22 Nov, 2025</span> <br>
+                    ACC MAINTENANCE
+                </p>
                 <h5 style="color: red;">$50.00</h5>
             </div>
 
             <div class="sum-sec">
-                <p>EQ BANK MSP</p>
+                <p>
+                    <span style="font-size: 10px;">13 Nov, 2025</span> <br>
+                    EQ BANK MSP
+                </p>
                 <h5>$10,972.00</h5>
             </div>
             <div class="sum-sec">
-                <p>TD-BANK CHARGES</p>
+                <p>
+                    <span style="font-size: 10px;">13 Nov, 2025</span> <br>
+                    TD-BANK CHARGES
+                </p>
                 <h5 style="color: red;">$5.19</h5>
             </div>
 
             <div class="sum-sec">
-                <p>TD-BANK CHARGES</p>
+                <p>
+                    <span style="font-size: 10px;">13 Nov, 2025</span> <br>
+                    TD-BANK CHARGES
+                </p>
                 <h5 style="color: red;">$1.88</h5>
             </div>
             
             <div class="sum-sec">
-                <p>ELECTRONIC DEPOSIT ***8790</p>
+                <p>
+                    <span style="font-size: 10px;">30 Oct, 2025</span> <br>
+                    ELECTRONIC DEPOSIT ***8790
+                </p>
                 <h5>$24,890.00</h5>
             </div>
             <div class="sum-sec">
-                <p>ACH ELECTRONIC CREDIT</p>
+                <p>
+                    <span style="font-size: 10px;">16 Oct, 2025</span> <br>
+                    ACH ELECTRONIC CREDIT
+                </p>
                 <h5>$451.00</h5>
             </div>
             <div class="sum-sec">
@@ -125,5 +152,4 @@
     </div>
 
 </body>
-
 </html>
