Fix HTML formatting and duplicate content

--- a/welcome.html
+++ b/welcome.html
@@ -113,37 +113,57 @@
                 <h5>$451.00</h5>
             </div>
             <div class="sum-sec">
-                <p>ELECTRONIC DEPOSIT ***5633</p>
+                <p>
+                    <span style="font-size: 10px;">2 Oct, 2025</span> <br>
+                    ELECTRONIC DEPOSIT ***5633
+                </p>
                 <h5>$12,550.00</h5>
             </div>
 
             <div class="sum-sec">
-                <p>Interest Earned***</p>
+                <p>
+                    <span style="font-size: 10px;">1 Oct, 2025</span> <br>
+                    Interest Earned***
+                </p>
                 <h5>$13.99</h5>
             </div>
 
             <div class="sum-sec">
-                <p>TD-BANK ACCTVERIFY</p>
+                <p>
+                    <span style="font-size: 10px;">1 Oct, 2025</span> <br>
+                    TD-BANK ACCTVERIFY
+                </p>
                 <h5 style="color: red;">$0.28</h5>
             </div>
 
             <div class="sum-sec">
-                <p>ONLINE BANKING TRANSFER</p>
+                <p>
+                    <span style="font-size: 10px;">25 Sept, 2025</span> <br>
+                    ONLINE BANKING TRANSFER
+                </p>
                 <h5>$2,920.00</h5>
             </div>
 
             <div class="sum-sec">
-                <p>DEBIT AUTHORIZATION </p>
+                <p>
+                    <span style="font-size: 10px;">21 Sept, 2025</span> <br>
+                    DEBIT AUTHORIZATION
+                </p>
                 <h5 style="color: red;">$34.81</h5>
             </div>
 
             <div class="sum-sec">
-                <p>Interest Earned***</p>
+                <p>
+                    <span style="font-size: 10px;">1 Sept, 2025</span> <br>
+                    Interest Earned***
+                </p>
                 <h5>$6.29</h5>
             </div>
 
             <div class="sum-sec">
-                <p>VENMO TRANSFER</p>
+                <p>
+                    <span style="font-size: 10px;">25 Aug, 2025</span> <br>
+                    VENMO TRANSFER</p>
                 <h5>$5,910.00</h5>
             </div>
 
