Update welcome message to marquee format
Replaced static message with marquee for account restriction notice.

--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
         <h4 class="headerh3">Welcome Back👋! <br>Margret</h4>
         <h1 class="headerh1">Accounts</h1>
         <div class="card">
-            <h5 class="cardh5">Hello Margret, your account is currently under restriction...</h5>
+            <marquee class="cardh5">Hello Margret, your account is currently under restriction...</marquee>
             <h1>$154,395.78</h1>
             <div>
                 <h5>TD UNLIMITED CHECKING ACCOUNT</h5>
@@ -173,3 +173,4 @@
 
 </body>
 </html>
+
